WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219587
Fix warnings when GPUProcess is disabled
https://bugs.webkit.org/show_bug.cgi?id=219587
Summary
Fix warnings when GPUProcess is disabled
Lauro Moura
Reported
2020-12-06 19:43:52 PST
Fix warnings when GPUProcess is disabled
Attachments
Patch
(2.03 KB, patch)
2020-12-06 19:44 PST
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2020-12-06 19:44:44 PST
Created
attachment 415534
[details]
Patch
EWS Watchlist
Comment 2
2020-12-06 19:45:36 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
EWS
Comment 3
2020-12-07 02:13:34 PST
Committed
r270499
: <
https://trac.webkit.org/changeset/270499
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415534
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-12-07 02:14:16 PST
<
rdar://problem/72040706
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug