Fix warnings when GPUProcess is disabled https://bugs.webkit.org/show_bug.cgi?id=219587

Reviewed by Žan Doberšek.

* UIProcess/API/glib/WebKitNavigationClient.cpp: Handle new enum value
in switch after r270415.
* WebProcess/WebPage/DrawingArea.cpp:
(WebKit::DrawingArea::supportsGPUProcessRendering): Default returning
false when GPUProcess is disabled.


Canonical link: https://commits.webkit.org/232176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270499 268f45cc-cd09-0410-ab3c-d52691b4dbfc